API_Reference/milvus-sdk-java/v2.1.0-beta4/About.md
# About Milvus Java SDK

Milvus Java SDK is an open-source project and its source code is hosted on [GitHub](https://github.com/milvus-io/milvus-sdk-java).

## Compatibility

| Milvus version | Recommended SDK version |
| -------------- | ----------------------- |
| 2.0.2          | 2.0.4                   |
| 2.1.0          | 2.1.0                   |

## Installation

You can use [Apache Maven](https://maven.apache.org/install.html) or [Gradle](https://gradle.org/install/)/[Grails](https://grails.org/download.html) to download the SDK.

- Apache Maven

```
 <dependency>
     <groupId>io.milvus</groupId>
     <artifactId>milvus-sdk-java</artifactId>
     <version>2.1.0-beta4</version>
 </dependency>
```

- Gradle/Grails

```
compile 'io.milvus:milvus-sdk-java:2.1.0-beta4'
```

## Contributing

We are committed to building a collaborative, exuberant open-source community for Milvus. Therefore, contributions to Milvus Java SDK are welcome from everyone. Refer to [Contributing Guideline](https://github.com/milvus-io/milvus-sdk-java/blob/master/CONTRIBUTING.md) before making contributions to this project. You can [file an issue](https://github.com/milvus-io/milvus-sdk-java/issues/new) if you need any assistance or want to propose your ideas.